// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    4
     
    expenses
     totaling 
    $500.00
    .
  </h3>
</div>
`;

exports[`should render Expenses Summary correctly with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling 
    $100.00
    .
  </h3>
</div>
`;
